--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,13 +9,16 @@
 <body>
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
-<h1> Hello world from ejs file</h1>
+<h1> Hello world from rance</h1>
 
 <div>
     <p>Setup a get started button and a persistent menu</p>
     <form action="/setup" method="POST">
         <button type="submit"> Set up </button>
     </form>
+    <form action="/close" method="GET">
+      <button type="submit"> Set up </button>
+  </form>
 </div>
 <!-- Load Facebook SDK for JavaScript -->
 
