--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -23,7 +23,7 @@
 <!-- Load Facebook SDK for JavaScript -->
 
 
-<script src="../public/js/myjavascript.js"></script>
+<script src="js/myjavascript.js"></script>
 <script>
     var chatbox = document.getElementById('fb-customer-chat');
     chatbox.setAttribute("page_id", "108905888402101");
